<resources>
    <string name="app_name">Moxa Controller</string>
    <string name="device_status">Device status</string>
    <string name="inputs">Inputs</string>
    <string name="relays">Relays</string>
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="device_address">Device address</string>
    <string name="connection_status">Connection status</string>
    <string name="model_name">Model name</string>
    <string name="device_uptime">Device uptime</string>
    <string name="firmware_version">Firmware version</string>
    <string name="mac_address">MAC address</string>
    <string name="ip_address">IP address</string>
    <string name="online_status">Online</string>
    <string name="offline_status">Offline</string>
    <string name="no_data">n/a</string>
    <string name="restful_api_endpoint">RESTful API endpoint</string>
    <string name="device_address_summary">Moxa ioLogik network address</string>
    <string name="restful_setting_summary">RESTful API base endpoint</string>
    <string name="device_name">Device name</string>
    <string name="website">www.appcoders.pl</string>
    <string name="wrong_address_exception_message"><![CDATA[Provided device address is not valid. Provide valid address in following format: http://<host>:<port>]]></string>
    <string name="wrong_device_address_alert_title">Wrong device address</string>
    <string name="device_status_refresh">Device status refreshed</string>
    <string name="refresh_toast">Refreshing…</string>
    <string name="error">Error</string>
    <string name="map_input">Map input</string>
    <string name="refreshingMessage">Refreshing...</string>
    <string name="di_index_title">Digital input index</string>
    <string name="di_mode_title">Mode</string>
    <string name="di_status_title">Status</string>
    <string name="di_counter_value_title">Counter value</string>
    <string name="menu_add">Add</string>
    <string name="menu_remove">Remove</string>
    <string name="input_details">Digital input details</string>
    <string name="di_name_title">Mapped name</string>
    <string name="button_reset_counter">Reset counter</string>
    <string name="relay_index_title">Relay index</string>
    <string name="relay_pulse_status_title">Status</string>
    <string name="relay_status_title">Status</string>
    <string name="button_change_state">Change state</string>
    <string name="map_relay">Map relay</string>
    <string name="relay_details">Relay details</string>
</resources>
